url address rechanged

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ p {
 }
 
 .container {
-  background-image: url('/images/coffee-beans.jpg');
+  background-image: url('images/coffee-beans.jpg');
   height: 100%;
   background-size: cover;
   display: flex;
@@ -105,7 +105,7 @@ p {
 }
 
 .home-left {
-  background-image: url('/images/map-lg.jpg');
+  background-image: url('images/map-lg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
