map image changed to medium size

--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ p {
 }
 
 .home-left {
-  background-image: url('./images/map-lg.jpg');
+  background-image: url('./images/map-md.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
